--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         </ul>
     </div>
 
-    <script src="js/app.js"></script>
+    <!--<script src="js/app.js"></script>-->
+    <script type="text/javascript" src="js/javascript.js"></script>
 </body>
 </html>
