--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     </div>
 
     <!--<script src="js/app.js"></script>-->
-    <script type="text/javascript" src="js/javascript.js"></script>
+    <!--<script type="text/javascript" src="js/javascript.js"></script>-->
+    <script type="text/javascript" src="js/javascript_memory.js"></script>
 </body>
 </html>
