delete all js files

--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@
 
     <!--<script src="js/app.js"></script>-->
     <!--<script type="text/javascript" src="js/javascript.js"></script>-->
-    <script type="text/javascript" src="js/javascript_memory.js"></script>
+    <script type="text/javascript" src="js/javascript.js"></script>
 </body>
 </html>
