--- a/index.html
+++ b/index.html
@@ -80,6 +80,17 @@
                 <i class="fa fa-cube"></i>
             </li>
         </ul>
+        <div class="modal">
+            <div class="modal-content">
+                <span class="btn">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                </span>
+                    <p class="alert-text">
+                    </p>
+                    <p class="rules">If you want to play again, press x and after that press restart. Additional information about rating: If you ended game for 15 steps, you've taken three stars. If you ended game for 25 steps, you've taken two stars. If you have more than 25 steps, you've taken only one star</p>
+                
+            </div>
+        </div>
     </div>
 
     <script type="text/javascript" src="js/javascript.js"></script>
