add debug restart game

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </span>
                     <p class="alert-text">
                     </p>
-                    <p class="rules">If you want to play again, press x and after that press restart. Additional information about rating: If you ended game for 15 steps, you've taken three stars. If you ended game for 25 steps, you've taken two stars. If you have more than 25 steps, you've taken only one star</p>
+                    <p class="rules">If you want to play again, press x and after that press restart. Rating calculation: if you reach the end of the game in less then 15 moves you get 3 stars, less then 25 moves - 2 stars, otherwise you get only 1 star</p>
                 
             </div>
         </div>
